--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "type": "module",
   "dependencies": {
-    "iconify-icon": "^2.0.0"
+    "iconify-icon": "^2.0.0",
+    "tailwind-merge": "^2.2.1"
   }
 }
