--- a/.eslintignore
+++ b/.eslintignore
@@ -6,8 +6,9 @@ node_modules
 .env
 .env.*
 !.env.example
-
-# Ignore files for PNPM, NPM and YARN
 pnpm-lock.yaml
 package-lock.json
 yarn.lock
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
+.vscode/
