--- a/.prettierignore
+++ b/.prettierignore
@@ -1,4 +1,14 @@
-# Ignore files for PNPM, NPM and YARN
+.DS_Store
+node_modules
+/build
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
 pnpm-lock.yaml
 package-lock.json
 yarn.lock
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
+.vscode/
